--- a/sickness.html
+++ b/sickness.html
@@ -48,7 +48,7 @@
 <section class="about">
 
     <div class="image">
-        <img src="images/sickness.avif" alt="">
+        <img src="images/sickness1.jpg" alt="">
     </div>
 
     <div class="content">
