--- a/sickness.html
+++ b/sickness.html
@@ -133,7 +133,7 @@
                 </div>
                 <h3>Understanding Menstrual Irregularities</h3>
                 <p> A Menstrual Cycle That Varies In Length, Duration, Or Flow Can Indicate An Underlying Health Issue Or Hormonal Imbalance.</p>
-                <a href="#" class="btn">read more</a>
+                <a href="mens.html" class="btn">read more</a>
             </div>
         </div>
 
@@ -148,7 +148,7 @@
                 </div>
                 <h3>Birth Control Options: </h3>
                 <p>It Can Be Challenging To Choose The One That's Best For You. In This Blog Post, We'll Go Over The Different Types Of Birth Control, Their Effectiveness Rates, And Their Potential Side Effects.</p>
-                <a href="#" class="btn">read more</a>
+                <a href="birth.html" class="btn">read more</a>
             </div>
         </div>
 
