--- a/sexblog.html
+++ b/sexblog.html
@@ -204,7 +204,7 @@
                 </div>
                 <h3> Alleviate Morning Sickness </h3>
                 <p> It Typically Starts Around The 6th Week Of Pregnancy And Peaks Around The 9th Week. While It's Often Referred To As Morning Sickness.</p>
-                <a href="#" class="btn">read more</a>
+                <a href="sickness.html" class="btn">read more</a>
             </div>
         </div>
 
