--- a/birth.html
+++ b/birth.html
@@ -161,7 +161,7 @@
                 </div>
                 <h3>Pelvic Pain</h3>
                 <p>Pelvic pain is a common symptom experienced by women of all ages. It can range from mild discomfort to severe pain that affects your daily activities.</p>
-                <a href="#" class="btn">read more</a>
+                <a href="pelvic.html" class="btn">read more</a>
             </div>
         </div>
 
